<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cr2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:src="@drawable/finallogo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlam_display"
        android:text="Create an account"
        android:textColor="@color/brown"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/username1"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="12dp" />

            <EditText
                android:id="@+id/emaill"
                android:layout_width="238dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/email2"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <EditText
                android:id="@+id/phoneno"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="12dp" />

            <EditText
                android:id="@+id/setPassword"
                android:layout_width="247dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/set_password"
                android:inputType="textPassword"
                android:padding="12dp" />

            <AutoCompleteTextView
                android:id="@+id/address"
                android:layout_width="246dp"
                android:layout_height="75dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="12dp"
                android:completionThreshold="3" />

            <Button
                android:id="@+id/useCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded"
                android:text="Get Current Address"
                android:textColor="@color/cream"
                android:fontFamily="@font/adlam_display"
                android:padding="8dp" />

            <EditText
                android:id="@+id/pincode"
                android:layout_width="240dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/rounded_edittext"
                android:hint="Pin Code"
                android:inputType="number"
                android:padding="12dp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
                android:text="@string/i_agree_with_the_terms_and_conditions"
                android:textColor="@color/brown"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rounded"
                    android:fontFamily="@font/adlam_display"
                    android:text="@string/register"
                    android:textColor="@color/cream"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/backToLogin"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@drawable/rounded"
                android:fontFamily="@font/adlam_display"
                android:text="Back to Login"
                android:textColor="@color/cream"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>