<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cr2"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="194dp"
        android:layout_height="144dp"
        android:layout_margin="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/filogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/vec"
        android:layout_width="229dp"
        android:layout_height="155dp"
        android:contentDescription="@string/todo2"
        android:src="@drawable/vecc3"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WELCOME BACK !"
        android:textSize="20sp"
        android:textColor="@color/brown"
        android:textStyle="bold"
        android:fontFamily="@font/adlam_display"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/username21"
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_email"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vec" />

    <EditText
        android:id="@+id/setPassword1"
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/greyish"
        app:layout_constraintTop_toBottomOf="@+id/username21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="126dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/adlam_display"
        android:text="@string/login21"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@+id/setPassword1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/blue"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Register"
        android:textColor="@color/blue"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/becomeDriverLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Become a Driver"
        android:textColor="@color/blue"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/registerLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>